--- a/.xmodmaprc
+++ b/.xmodmaprc
@@ -12,5 +12,5 @@
 !add Control = Control_L
 
 ! '"~  : all require extra space to be typed. irksome!
-!keycode 48 = apostrophe
+keycode 48 = apostrophe
 
